--- a/Splitwise.Web/Splitwise.Web.csproj
+++ b/Splitwise.Web/Splitwise.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <ProjectReference Include="..\Splitwise.DomainModel\Splitwise.DomainModel.csproj" />
     <ProjectReference Include="..\Splitwise.Core\Splitwise.Core.csproj" />
   </ItemGroup>
