--- a/Splitwise.DomainModel/Splitwise.DomainModel.csproj
+++ b/Splitwise.DomainModel/Splitwise.DomainModel.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201022070849_AddedPasswordFeild.cs" />
+    <Compile Remove="Migrations\20201022070849_AddedPasswordFeild.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
       <PrivateAssets>all</PrivateAssets>
