Added controlor methods, 4 repository and some spelling mistakes

--- a/Splitwise.Core/Splitwise.Core.csproj
+++ b/Splitwise.Core/Splitwise.Core.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Splitwise.DomainModel\Splitwise.DomainModel.csproj" />
+    <ProjectReference Include="..\Splitwise.Repository\Splitwise.Repository.csproj" />
   </ItemGroup>
 
 </Project>
