Added group, expense and friend repository implementation

--- a/Splitwise.Web/Splitwise.Web.csproj
+++ b/Splitwise.Web/Splitwise.Web.csproj
@@ -10,7 +10,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <ProjectReference Include="..\Splitwise.DomainModel\Splitwise.DomainModel.csproj" />
-    <ProjectReference Include="..\Splitwise.Core\Splitwise.Core.csproj"/>
+    <ProjectReference Include="..\Splitwise.Core\Splitwise.Core.csproj" />
+    <ProjectReference Include="..\Splitwise.Repository\Splitwise.Repository.csproj" />
   </ItemGroup>
 
 
